<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ResetPasswordHeading"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/ResetPasswordDescription"
        android:textSize="15dp" />

    <!--Email input edit text for email-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutResetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_reset_email"
            style="@style/TextAppearence.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/EditTextHint"
            android:inputType="textEmailAddress"
            android:textColor="#212121"
            android:textColorHint="#212121" />
    </android.support.design.widget.TextInputLayout>

    <!--Reset password button-->
    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:backgroundTint="#ef5350"
        android:text="@string/ResetPasswordHeading"
        android:textColor="@color/white" />
</LinearLayout>